Adds browserAction for extension button

--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,8 @@
                 "app.js"
             ]
         }
-    ]
+    ],
+    "background": {
+        "scripts": ["background.js"]
+    }
 }
