Adds browser specific settings to allow use of the extension locally

--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,13 @@
         }
     ],
     "background": {
-        "scripts": ["background.js"]
+        "scripts": [
+            "background.js"
+        ]
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "blahblah@blah"
+        }
     }
 }
