--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,7 @@
     "name": "Rollercoin Ratio",
     "version": "1.0",
     "description": "Rollercoin extension to display miner power/cost ratio.",
-    "permissions": [
-        "activeTab",
-        "tabs"
-    ],
+    "permissions": ["activeTab","tabs"],
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
@@ -18,20 +15,12 @@
             "48": "icons/icon48.png"
         }
     },
-    "content_scripts": [
-        {
-            "matches": [
-                "https://rollercoin.com/marketplace"
-            ],
-            "js": [
-                "app.js"
-            ]
-        }
-    ],
+    "content_scripts": [{
+        "matches": ["https://rollercoin.com/marketplace"],
+        "js": ["app.js"]
+    }],
     "background": {
-        "scripts": [
-            "background.js"
-        ]
+        "scripts": ["background.js"]
     },
     "browser_specific_settings": {
         "gecko": {
