--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,24 @@
 {
-    "manifest_version": 2,
-    "name": "Rollercoin Ratio",
-    "version": "1.0",
-    "description": "Rollercoin extension to display miner power/cost ratio.",
-    "permissions": ["activeTab","tabs"],
+    "manifest_version"  : 2,
+    "name"              : "Rollercoin Ratio",
+    "version"           : "1.0",
+    "description"       : "Rollercoin extension to display miner power/cost ratio.",
+    "permissions"       : ["activeTab","tabs","storage"],
     "icons": {
-        "16": "icons/icon16.png",
-        "32": "icons/icon32.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
+        "16"    : "icons/icon16.png",
+        "32"    : "icons/icon32.png",
+        "48"    : "icons/icon48.png",
+        "128"   : "icons/icon128.png"
     },
     "browser_action": {
-        "default_icon": {
+        "default_popup" : "popup.html",
+        "default_icon"  : {
             "48": "icons/icon48.png"
         }
     },
     "content_scripts": [{
-        "matches": ["https://rollercoin.com/marketplace"],
-        "js": ["app.js"]
+        "matches"   : ["https://rollercoin.com/marketplace*"],
+        "js"        : ["app.js"]
     }],
     "background": {
         "scripts": ["background.js"]
